--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -4,6 +4,13 @@
     text-align: center;
 }
 
+.contenedorborder{
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    border-radius: 10px;
+}
+
 .texto-encima{
     position: absolute;
     top: 30%;
@@ -12,6 +19,66 @@
     font-size: 50px;
     width: 45%;
     transform: translate(-50%, -50%);
+}
+.texto-arriba{
+    position: absolute;
+    color: white;
+    top: 44%;
+    left: 24%;
+    text-align: initial;
+    width: 30%;
+    font-size: 36px;
+    transform: translate(-50%, -50%);
+}
+.texto-abajo{
+    position: absolute;
+    color: white;
+    top: 68%;
+    left: 24%;
+    text-align: center;
+    width: 30%;
+    transform: translate(-50%, -50%);
+}
+.texto-dearriba{
+    position: absolute;
+    color: white;
+    top: 35%;
+    left: 50%;
+    text-align: center;
+    width: 60%;
+    font-size: 36px;
+    transform: translate(-50%, -50%);
+}
+.texto-debajo{
+    position: absolute;
+    color: white;
+    top: 60%;
+    left: 50%;
+    text-align: center;
+    width: 80%;
+    transform: translate(-50%, -50%);
+}
+@media(max-width:720px){
+    .texto-arriba{
+        position: absolute;
+        color: white;
+        top: 32%;
+        left: 50%;
+        text-align: center;
+        width: 90%;
+        font-size: 13px;
+        transform: translate(-50%, -50%);
+    }
+    .texto-abajo{
+        position: absolute;
+        color: white;
+        top: 68%;
+        left: 50%;
+        text-align: center;
+        width: 90%;
+        font-size: 10px;
+        transform: translate(-50%, -50%);
+    }
 }
 .centrado{
     position: absolute;
@@ -50,6 +117,18 @@
     border-radius: 0.4285rem;
     transform: translate(-50%, -50%);
 }
+.btn-pri{
+    border-color: #66FFCC !important;
+    color: black!important;
+    box-shadow: 0 8px 25px -8px #66ffcc;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    width: 13%;
+    background-color: #66FFCC;
+    border-radius: 0.4285rem;
+    transform: translate(-50%, -50%);
+}
 .texto-simple{
     color: black;
     width: 65%;
@@ -63,3 +142,217 @@
     color:#66FFCC;
     font-size: 20px;
 }
+
+.card-home{
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #173138;
+    background-clip: border-box;
+    border: 1px solid rgba(34, 41, 47, 0.125);
+    border-radius: 0.5rem;
+    width: 10px;
+}
+
+.testimonials-clean {
+    color:#313437;
+  }
+  
+  .testimonials-clean p {
+    color:#7d8285;
+  }
+  
+  .testimonials-clean h2 {
+    font-weight:bold;
+    margin-bottom:40px;
+    padding-top:40px;
+    color:inherit;
+  }
+  
+  @media (max-width:767px) {
+    .testimonials-clean h2 {
+      margin-bottom:25px;
+      padding-top:25px;
+      font-size:24px;
+    }
+  }
+  
+  .testimonials-clean .intro {
+    font-size:16px;
+    max-width:500px;
+    margin:0 auto;
+  }
+  
+  .testimonials-clean .intro p {
+    margin-bottom:0;
+  }
+  
+  .testimonials-clean .people {
+    padding:50px 0 20px;
+  }
+  
+  .testimonials-clean .item {
+    margin-bottom:32px;
+  }
+  
+  @media (min-width:768px) {
+    .testimonials-clean .item {
+      height:220px;
+    }
+  }
+  
+  .testimonials-clean .item .box {
+    margin-top: 10%;
+    padding:30px;
+    background-color:#fbf9fc;
+    position:relative;
+  }
+  
+  
+  
+  .testimonials-clean .item .author {
+    position: absolute;
+    margin-top:-185px;
+    background: white;
+    padding-left:25px;
+    height: 25%;
+    width: 40%;
+  }
+  
+  .testimonials-clean .item .name {
+    font-weight:bold;
+    margin-bottom:2px;
+    color:inherit;
+  }
+  
+  .testimonials-clean .item .title {
+    font-size:13px;
+    color:#9da9ae;
+  }
+  
+  .testimonials-clean .item .description {
+    font-size:15px;
+    margin-bottom:0;
+  }
+  
+  .testimonials-clean .item img {
+    max-width:40px;
+    float:left;
+    margin-right:12px;
+    margin-top:-5px;
+  }
+  
+  .footer-clean {
+    padding: 100px 0;
+    background-color: #173138;
+    color: white;
+  }
+  
+  .footer-clean h3 {
+    margin-top:0;
+    margin-bottom:12px;
+    font-weight:bold;
+    font-size:16px;
+  }
+  
+  .footer-clean ul {
+    padding:0;
+    list-style:none;
+    line-height:1.6;
+    font-size:14px;
+    margin-bottom:0;
+  }
+  
+  .footer-clean ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+  
+  .footer-clean ul a:hover {
+    opacity:1;
+  }
+  
+  .footer-clean .item.social {
+    text-align:right;
+  }
+  
+  @media (max-width:767px) {
+    .footer-clean .item {
+      text-align:center;
+      padding-bottom:20px;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .footer-clean .item.social {
+      text-align:center;
+    }
+  }
+  
+  .footer-clean .item.social > a {
+    font-size:24px;
+    width:40px;
+    height:40px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    border:1px solid #ccc;
+    margin-left:10px;
+    margin-top:22px;
+    color:inherit;
+    opacity:0.75;
+  }
+  
+  .footer-clean .item.social > a:hover {
+    opacity:0.9;
+  }
+  
+  @media (max-width:991px) {
+    .footer-clean .item.social > a {
+      margin-top:40px;
+    }
+  }
+  
+  @media (max-width:767px) {
+    .footer-clean .item.social > a {
+      margin-top:10px;
+    }
+  }
+  
+  .footer-clean .copyright {
+    margin-top:14px;
+    margin-bottom:0;
+    font-size:13px;
+    opacity:0.6;
+  }
+
+  .btn-sub{
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 0.7rem 0.7rem;
+    margin-bottom: 0;
+    font-size: 0.96rem;
+    font-weight: 400;
+    line-height: 1.25;
+    color: black!important;
+    text-align: center;
+    white-space: nowrap;
+    box-shadow: 0 8px 25px -8px #66ffcc;
+    background-color: #66FFCC;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+  }
