--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -68,6 +68,16 @@
     font-size: 50px;
     transform: translate(-50%, -50%);
 }
+.texto-con {
+  position: absolute;
+    color: white;
+    top: 35%;
+    left: 22%;
+    text-align: center;
+    width: 60%;
+    font-size: 50px;
+    transform: translate(-50%, -50%);
+}
 
 .texto-tiendaB {
   position: absolute;
@@ -158,6 +168,17 @@
     background-color: #66FFCC;
     border-radius: 0.4285rem;
     transform: translate(-50%, -50%);
+}
+.btn-con{
+  border-color: #66FFCC !important;
+  color: black!important;
+  box-shadow: 0 8px 25px -8px #66ffcc;
+  position: absolute;
+  left: 75%;
+  width: 30%;
+  background-color: #66FFCC;
+  border-radius: 0.4285rem;
+  transform: translate(-50%, -50%);
 }
 .texto-simple{
     color: black;
@@ -260,7 +281,6 @@
     height: 25%;
     width: 40%;
 }
-  }
   
   .testimonials-clean .item .name {
     font-weight:bold;
