--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -12,13 +12,14 @@
 }
 
 .texto-encima{
-    position: absolute;
-    top: 30%;
-    color: black;
-    left: 24%;
-    font-size: 50px;
-    width: 45%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 30%;
+  color: #303030;
+  left: 26%;
+  font-size: 60px;
+  width: 50%;
+  text-align: justify;
+  transform: translate(-50%, -50%);
 }
 .texto-arriba{
     position: absolute;
@@ -121,12 +122,12 @@
     }
 }
 .centrado{
-    position: absolute;
+  position: absolute;
     color: black;
     top: 44%;
-    left: 24%;
+    left: 26%;
     text-align: justify;
-    width: 30%;
+    width: 36%;
     transform: translate(-50%, -50%);
 }
 
@@ -146,16 +147,16 @@
 }
 
 .btn-pry{
-    border-color: #66FFCC !important;
-    color: black!important;
-    box-shadow: 0 8px 25px -8px #66ffcc;
-    position: absolute;
-    top: 53%;
-    left: 15%;
-    width: 13%;
-    background-color: #66FFCC;
-    border-radius: 0.4285rem;
-    transform: translate(-50%, -50%);
+  border-color: #66FFCC !important;
+  color: black!important;
+  box-shadow: 0 8px 25px -8px #66ffcc;
+  position: absolute;
+  top: 53%;
+  left: 15%;
+  width: 15%;
+  background-color: #66FFCC;
+  border-radius: 0.4285rem;
+  transform: translate(-50%, -50%);
 }
 .btn-pri{
     border-color: #66FFCC !important;
@@ -168,6 +169,32 @@
     background-color: #66FFCC;
     border-radius: 0.4285rem;
     transform: translate(-50%, -50%);
+}
+.btn-cre{
+  border-color: #F2F1F3 !important;
+  color: black!important;
+  box-shadow: 0 8px 25px -8px #f2f1f3;
+  position: absolute;
+  top: 90%;
+  left: 39%;
+  width: 70%;
+  height: 30px;
+  background-color: #F2F1F3;
+  border-radius: 0.4285rem;
+  transform: translate(-50%, -50%);
+}
+.btn-cren{
+  border-color: #F2F1F3 !important;
+  color: black!important;
+  box-shadow: 0 8px 25px -8px #f2f1f3;
+  position: absolute;
+  top: 65%;
+  left: 20%;
+  width: 30%;
+  height: 30px;
+  background-color: #F2F1F3;
+  border-radius: 0.4285rem;
+  transform: translate(-50%, -50%);
 }
 .btn-con{
   border-color: #66FFCC !important;
@@ -182,12 +209,13 @@
 }
 .texto-simple{
     color: black;
-    width: 65%;
-    margin-left: 17%;
+    font-size: 20px;
+    width: 80%;
+    margin-left: 10%;
 
 }
 .texto-title{
-    font-size: 50px;
+  font-size: 60px;
 }
 .text-card{
     color:#66FFCC;
@@ -411,4 +439,12 @@
     border-radius: 5px;
   }
 
-  
+  @media (min-width: 768px){
+.cus-md-3 {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 25%;
+    -ms-flex: 0 0 25%;
+    flex: 0 0 25%;
+    max-width: 30%;
+}
+}
