--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -188,7 +188,7 @@
   box-shadow: 0 8px 25px -8px #66ffcc;
   position: absolute;
   top: 53%;
-  left: 15%;
+  left: 15.8%;
   width: 15%;
   background-color: #66FFCC;
   border-radius: 0.4285rem;
@@ -221,18 +221,19 @@
   transform: translate(-50%, -50%);
 }
 .btn-cren{
-  border-color: #F2F1F3 !important;
-  color: black!important;
-  box-shadow: 0 8px 25px -8px #f2f1f3;
-  position: absolute;
-  top: 65%;
-  left: 20%;
-  width: 30%;
-  height: 30px;
-  background-color: #F2F1F3;
-  border-radius: 0.4285rem;
-  transform: translate(-50%, -50%);
+    border-color: #F2F1F3 !important;
+    color: #616061!important;
+    box-shadow: 0 8px 25px -8px #f2f1f3;
+    position: absolute;
+    top: 70%;
+    left: 25%;
+    width: 20%;
+    height: 27px;
+    background-color: #F2F1F3;
+    border-radius: 0.4285rem;
+    transform: translate(-50%, -50%);
 }
+
 .btn-con{
   border-color: #66FFCC !important;
   color: black!important;
@@ -484,4 +485,10 @@
     flex: 0 0 25%;
     max-width: 30%;
 }
+}
+.product{
+  box-shadow: 0 4px 25px 0 rgb(0 0 0 / 10%);
+  background:#FFFFFF;
+  height: 400px;
+  border-radius: 10px;
 }
