--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -225,8 +225,8 @@
     color: #616061!important;
     box-shadow: 0 8px 25px -8px #f2f1f3;
     position: absolute;
-    top: 70%;
-    left: 25%;
+    top: 68%;
+    left: 23%;
     width: 20%;
     height: 27px;
     background-color: #F2F1F3;
@@ -485,10 +485,18 @@
     flex: 0 0 25%;
     max-width: 30%;
 }
+.cus-md-4 {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 33.33333%;
+    -ms-flex: 0 0 33.33333%;
+    flex: 0 0 33.33333%;
+    max-width: 30.33333%;
+}
 }
 .product{
   box-shadow: 0 4px 25px 0 rgb(0 0 0 / 10%);
-  background:#FFFFFF;
+  background: #FFFFFF;
   height: 400px;
   border-radius: 10px;
+  padding: 0.8rem;
 }
