--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -62,19 +62,34 @@
 }
 .texto-tienda {
   position: absolute;
+  color: white;
+  top: 21%;
+  left: 16%;
+  text-align: center;
+  width: 60%;
+  font-size: 50px;
+  transform: translate(-50%, -50%);
+}
+.texto-about {
+  position: absolute;
     color: white;
-    top: 35%;
-    left: 18%;
+    top: 30%;
+    left: 25%;
     text-align: center;
     width: 60%;
     font-size: 50px;
     transform: translate(-50%, -50%);
 }
+.texto-aboutS {
+  color: #303030;
+  font-size: 16px;
+}
+
 .texto-con {
   position: absolute;
     color: white;
-    top: 35%;
-    left: 22%;
+    top: 22%;
+    left: 20%;
     text-align: center;
     width: 60%;
     font-size: 50px;
@@ -83,19 +98,28 @@
 
 .texto-tiendaB {
   position: absolute;
-  color: white;
-  top: 43%;
-  left: 16%;
-  text-align: center;
-  transform: translate(-50%, -50%);
+    color: white;
+    top: 30%;
+    left: 14.5%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+}
+
+.texto-conB {
+  position: absolute;
+    color: white;
+    top: 30%;
+    left: 14.5%;
+    text-align: center;
+    transform: translate(-50%, -50%);
 }
 
 .texto-aboutB {
   position: absolute;
     color: #5CE5B9;
     font-size: 18px;
-    top: 28%;
-    left: 17%;
+    top: 24%;
+    left: 24%;
     text-align: center;
     transform: translate(-50%, -50%);
 }
@@ -261,15 +285,12 @@
 }
 
 .text-about{
-  color:#000000;
-  font-size: 20px;
+  color:#303030;
+  font-size: 24px;
 }
 
 .card-home{
     position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -499,4 +520,8 @@
   height: 400px;
   border-radius: 10px;
   padding: 0.8rem;
+}
+.img-head{
+  background: #173138;
+  height: 200px;
 }
