--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -15,7 +15,7 @@
   position: absolute;
   top: 30%;
   color: #303030;
-  left: 25%;
+  left: 28%;
   font-size: 60px;
   width: 50%;
   text-align: justify;
@@ -183,11 +183,12 @@
 }
 .centrado{
   position: absolute;
-    color: black;
-    top: 44%;
-    left: 25%;
-    text-align: justify;
+    color: #303030;
+    top: 43%;
+    left: 28%;
+    text-align: initial;
     width: 36%;
+    font-size: 15px;
     transform: translate(-50%, -50%);
 }
 
@@ -208,15 +209,15 @@
 
 .btn-pry{
   border-color: #66FFCC !important;
-    color: black!important;
-    box-shadow: 0 8px 25px -8px #66ffcc;
-    position: absolute;
-    top: 53%;
-    left: 14.8%;
-    width: 15%;
-    background-color: #66FFCC;
-    border-radius: 0.4285rem;
-    transform: translate(-50%, -50%);
+  color: black!important;
+  box-shadow: 0 8px 25px -8px #66ffcc;
+  position: absolute;
+  top: 53%;
+  left: 17.5%;
+  width: 15%;
+  background-color: #66FFCC;
+  border-radius: 0.4285rem;
+  transform: translate(-50%, -50%);
 }
 .btn-pri{
   border-color: #66FFCC !important;
@@ -270,14 +271,15 @@
   transform: translate(-50%, -50%);
 }
 .texto-simple{
-    color: black;
-    font-size: 20px;
+    color: #303030;
+    font-size: 15px;
     width: 80%;
     margin-left: 10%;
 
 }
 .texto-title{
-  font-size: 60px;
+  color: #303030;
+  font-size: 40px;
 }
 .text-card{
     color:#66FFCC;
