--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -166,7 +166,7 @@
     font-size: 6px;
     transform: translate(-50%, -50%);
     }
-    
+
 .btn-pri{
   border-color: #66FFCC !important;
     color: black!important;
@@ -237,8 +237,8 @@
   box-shadow: 0 8px 25px -8px #f2f1f3;
   position: absolute;
   top: 90%;
-  left: 39%;
-  width: 70%;
+  left: 57px;
+  width: 85px;
   height: 30px;
   background-color: #F2F1F3;
   border-radius: 0.4285rem;
@@ -309,18 +309,18 @@
 .testimonials-clean {
     color:#313437;
   }
-  
+
   .testimonials-clean p {
     color:#7d8285;
   }
-  
+
   .testimonials-clean h2 {
     font-weight:bold;
     margin-bottom:40px;
     padding-top:40px;
     color:inherit;
   }
-  
+
   @media (max-width:767px) {
     .testimonials-clean h2 {
       margin-bottom:25px;
@@ -328,38 +328,38 @@
       font-size:24px;
     }
   }
-  
+
   .testimonials-clean .intro {
     font-size:16px;
     max-width:500px;
     margin:0 auto;
   }
-  
+
   .testimonials-clean .intro p {
     margin-bottom:0;
   }
-  
+
   .testimonials-clean .people {
     padding:50px 0 20px;
   }
-  
+
   .testimonials-clean .item {
     margin-bottom:32px;
   }
-  
+
   @media (min-width:768px) {
     .testimonials-clean .item {
       height:220px;
     }
   }
-  
+
   .testimonials-clean .item .box {
     margin-top: 10%;
     padding:30px;
     background-color:#fbf9fc;
     position:relative;
   }
-  
+
   .testimonials-clean .item .author {
     position: absolute;
     margin-top: -220px;
@@ -368,43 +368,43 @@
     height: 25%;
     width: 40%;
 }
-  
+
   .testimonials-clean .item .name {
     font-weight:bold;
     margin-bottom:2px;
     color:inherit;
   }
-  
+
   .testimonials-clean .item .title {
     font-size: 14px;
     color: #253E45
   }
-  
+
   .testimonials-clean .item .description {
     font-size:15px;
     margin-bottom:0;
   }
-  
+
   .testimonials-clean .item img {
     max-width:40px;
     float:left;
     margin-right:12px;
     margin-top:-5px;
   }
-  
+
   .footer-clean {
     padding: 100px 0;
     background-color: #173138;
     color: white;
   }
-  
+
   .footer-clean h3 {
     margin-top:0;
     margin-bottom:12px;
     font-weight:bold;
     font-size:16px;
   }
-  
+
   .footer-clean ul {
     padding:0;
     list-style:none;
@@ -412,34 +412,34 @@
     font-size:14px;
     margin-bottom:0;
   }
-  
+
   .footer-clean ul a {
     color:inherit;
     text-decoration:none;
     opacity:0.8;
   }
-  
+
   .footer-clean ul a:hover {
     opacity:1;
   }
-  
+
   .footer-clean .item.social {
     text-align:right;
   }
-  
+
   @media (max-width:767px) {
     .footer-clean .item {
       text-align:center;
       padding-bottom:20px;
     }
   }
-  
+
   @media (max-width: 768px) {
     .footer-clean .item.social {
       text-align:center;
     }
   }
-  
+
   .footer-clean .item.social > a {
     font-size:24px;
     width:40px;
@@ -454,23 +454,23 @@
     color:inherit;
     opacity:0.75;
   }
-  
+
   .footer-clean .item.social > a:hover {
     opacity:0.9;
   }
-  
+
   @media (max-width:991px) {
     .footer-clean .item.social > a {
       margin-top:40px;
     }
   }
-  
+
   @media (max-width:767px) {
     .footer-clean .item.social > a {
       margin-top:10px;
     }
   }
-  
+
   .footer-clean .copyright {
     margin-top:14px;
     margin-bottom:0;
@@ -524,4 +524,13 @@
 .img-head{
   background: #173138;
   height: 200px;
+}
+
+.background{
+    position: relative;
+
+    height:145px;
+    width:100px;
+    background:#66FFCC;
+    border-radius: 10px;
 }
