--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -518,6 +518,13 @@
   flex: 0 0 25.5%;
   max-width: 30%;
 }
+.cas-md-3 {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 25%;
+  -ms-flex: 0 0 25%;
+  flex: 0 0 27%;
+  max-width: 27%;
+}
 .cus-md-4 {
   -webkit-box-flex: 0;
   -webkit-flex: 0 0 33.33333%;
