--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -433,7 +433,7 @@ cursor: pointer;
     margin-bottom: 0;
     margin-top: 0px;
   }
-  
+
 .heigth-con{height: 180px;}
 
   .texto-encima{
@@ -822,4 +822,42 @@ cursor: pointer;
 .text-ab{
   width: 100%;
   margin-left: -5px;
+}
+
+.fondo{
+    z-index: 8;
+    background-image:url('../img/formas_fondo1.png');
+    background-size: cover;
+    background-position: top center;
+    height: 60rem;
+    min-width: 20em;
+}
+
+.fondo2{
+    background-color: #F2F4F4;
+    background-size: auto;
+}
+
+
+
+.fondo4{
+    background: #173138;
+    background-image: url('../img/formas_fondo2.png');
+    width: 100%;
+    height: 70%;
+}
+.fondo3{
+    background-image: url('../img/cbd1.png');
+    background-size: cover;
+    background-position: top center;
+    height: 60rem;
+    min-width: 20em;
+
+}
+
+.frente{
+    z-index: 8;
+}
+.atras{
+    z-index: -8;
 }
