--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -830,8 +830,17 @@ cursor: pointer;
     background-size: cover;
     background-position: top center;
     height: 60rem;
+    max-width: 101%;
     min-width: 20em;
 }
+
+.fondo1{
+    background:#F0FFFA;
+    height: 60rem;
+    max-width: 101%;
+    min-width: 20em;
+}
+
 
 .fondo2{
     background-color: #F2F4F4;
@@ -859,5 +868,5 @@ cursor: pointer;
     z-index: 8;
 }
 .atras{
-    z-index: -8;
+    z-index: -1;
 }
