--- a/public/assets/css/dashboard/bootstrap.css
+++ b/public/assets/css/dashboard/bootstrap.css
@@ -537,6 +537,12 @@ pre code {
   }
 }
 
+@media (min-width: 1400px){
+.container {
+max-width: 1320px;
+ }
+}
+
 .container-fluid {
   width : 100%;
   padding-right : 14px;
