--- a/public/assets/css/home/home-style.css
+++ b/public/assets/css/home/home-style.css
@@ -2,8 +2,22 @@
 
 
 @media screen and (max-width: 980px) {
-    .no{
+.no{
         display: none;
+
+}
+.cir{
+    position: relative;
+    left: 3.5% !important;
+    top: -20px !important;
+}
+
+.textAling{
+    text-align: center !important;
+}
+.link1{
+    position: relative;
+    left: 15% !important;
 
 }
 
@@ -32,15 +46,7 @@
     .condicional2{
         background:#66FFCC; width: 22rem !important;
     }
-    .btn-cre {
-        border-color: #c3c3c4 !important;
-        color: black!important;
-        font-size: 12px;
-        background: #F2F1F3;
-        border-radius: 0.4285rem;
-        height: 20px !important;
-        width:25% !important;
-        }
+
 
         .side:hover{
             color: #66FFCC !important;
@@ -130,6 +136,18 @@
 
 
 /* nuevas clases para el home */
+.link1{
+    position: relative;
+    left: 73%;
+
+ }
+.custominput{
+    border: 0;
+    outline: 0 !important;
+}
+.textAling{
+    left: 990px;
+}
 .ms{
     height:450px ;
     background: #ffffff;
@@ -182,13 +200,13 @@
   font-size: 40px;
 }
 .btn-cre {
-  border-color: #c3c3c4 !important;
-  color: black!important;
-  font-size: 12px;
-  background: #F2F1F3;
-  border-radius: 0.4285rem;
-  height: 20px !important;
-  width:50%;
+    font-size: 13px;
+    text-decoration: none;
+    color: #000000;
+    border-color: #c3c3c4 !important;
+    background-color: #F2F1F3;
+    border-radius: 6px;
+    height: 20px;
   }
   .blok{
     display: inline-block !important;
@@ -1129,4 +1147,7 @@ cursor: pointer;
 input::placeholder{
     background: white !important;
     color:#000000 !important;
+}
+.textAlingComprar{
+    text-align: center !important;
 }
